# nc_cutout

./: .gitignore  LICENSE  NC_cutout.py  README.md  pyproject.toml  requirements.txt
config/: example_config.yaml
nc_cutout/: __init__.py  cutout.py
